# rcp-docker-images

./: .gitignore  LIGHT_MIGRATION.md  LIGHT_README.md  README.md  pyproject.toml
installation/conda-osx-arm64-mps/: README.md  environment.yml  update-env-file.sh
installation/docker-amd64-cuda/: .env  Dockerfile  Dockerfile-axolotl  Dockerfile-end2end  Dockerfile-training  Dockerfile-user  Dockerfile-vllm  Dockerfile-vllm-user  README.md  compose-base.yaml  compose.yaml  requirements.txt  template.sh
installation/docker-amd64-cuda/EPFL-runai-setup/: README.md
installation/docker-amd64-cuda/EPFL-runai-setup/template-submit-examples/: first_steps.sh  minimal.sh  remote_development.sh  unattended.sh
installation/docker-amd64-cuda/dependencies/: requirements.txt
installation/docker-amd64-cuda/entrypoints/: entrypoint.sh  logins-setup.sh  remote-development-setup.sh
reproducibility-scripts/: template-sweep.yaml
template/: template-variables.env
tests/: basic_training.sh
